--- a/.env-template
+++ b/.env-template
@@ -10,6 +10,9 @@ GUILD_ID="server_id"
 # The currency symbol to display and use (leave USD unless you modify the code to pull an alternative currency)
 CURRENCY_SYMBOL="$"
 
+# The number of minutes between price checks, minimum 1 minute.
+UPDATE_FREQUENCY="5"
+
 # Songbird - only change the RPC_PROVIDER if needed in this section
 RPC_PROVIDER="https://sgb.ftso.com.au/ext/bc/C/rpc"
 BASE_TOKEN="sgb" #Leave lower case
